fixed repo link; added some info to about page; added components and tutorial pages; added some images (not all are being used though); some css helpers for information boxes

--- a/docs/gnmd.css
+++ b/docs/gnmd.css
@@ -1,3 +1,25 @@
 .gnmd-warning {
-    background-color: var(--bs-warning-text-emphasis)
+    color: var(--bs-warning-text-emphasis);
+    font-weight: bold;
+}
+
+.gnmd-infotext {
+    color: var(--bs-info-text-emphasis);
+    font-style: italic;
+}
+
+.gnmd-infobox {
+    background-color: var(--bs-info-bg-subtle);
+    border: 1px dashed var(--bs-info-text-emphasis);
+    padding: 1rem;
+    margin-bottom: 1rem;
+    font-style: italic;
+}
+
+.gnmd-warningbox {
+    background-color: var(--bs-warning-bg-subtle);
+    border: 1px dashed var(--bs-warning-text-emphasis);
+    padding: 1rem;
+    margin-bottom: 1rem;
+    font-style: italic;
 }
