added new TWCF logo; improved some links (using mkdocs md refs instead of paths); added feedback form

--- a/docs/gnmd.css
+++ b/docs/gnmd.css
@@ -23,3 +23,13 @@
     margin-bottom: 1rem;
     font-style: italic;
 }
+
+.gnmd-homelogos {
+    /* background-color: var(--bs-body-color); */
+    /* background-color: #dee2e6; */
+}
+
+.gnmd-homelogos img {
+    /* background-color: var(--bs-body-color); */
+    background-color: #dee2e6;
+}
